added main info

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,13 +1,18 @@
 project:
   type: website
+  resources: "Kevin_Ngo_Resume.pdf"
 
 website:
-  title: "personal-website"
+  title: "Kevin Ngo"
   navbar:
     left:
       - href: index.qmd
         text: Home
-      - about.qmd
+      - href: Projects.qmd
+        text: Projects
+      
+  page-footer: 
+    right: "&copy; 2025, Kevin Ngo"
 
 format:
   html:
@@ -18,4 +23,6 @@ format:
     toc: true
 
 
+execute:
+ freeze: auto
 
